<resources>
    <string name="app_name">WorkerBee</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="login_failed">login failed</string>
    <string name="google_login">Google Login</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No active internet found.</string>
    <string name="search_your_favorite_channels">Search your favorite channels</string>
    <string name="search_channels">Search channels</string>
    <string name="no_result_found">No Result Found</string>
    <string name="channel">Channel</string>
    <string name="watch_videos">Watch Videos</string>
    <string name="catch_up_on_all_of_your_favorite_channels_here">Catch up on all of your favorite channels here!</string>
</resources>