<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/image"
                android:src="@drawable/icon_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_13sdp"
                android:textSize="@dimen/_26ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/catch_up_on_all_of_your_favorite_channels_here"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:padding="@dimen/_7sdp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="start"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/icon_google" />

                    <TextView
                        style="@style/text_normal_semi_bold"
                        android:layout_gravity="center"
                        android:text="@string/sign_in_with_google"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>